meja/tests/shadowing-module-prover.meja
module M = {
  type t;
};

Prover {
  module M = {
    type u;
  };
};
